package node

import (
	"context"
	"errors"
	drpclient "linkany/drp/client"
	"linkany/internal"
	controlclient "linkany/management/client"
	grpcclient "linkany/management/grpc/client"
	"linkany/management/vo"
	"linkany/pkg/config"
	"linkany/pkg/drp"
	"linkany/pkg/log"
	"linkany/pkg/probe"
	"linkany/pkg/wrapper"
	turnclient "linkany/turn/client"
	"net"
	"strings"
	"sync"
	"sync/atomic"
	"time"

	wg "golang.zx2c4.com/wireguard/device"
	"golang.zx2c4.com/wireguard/tun"
	"golang.zx2c4.com/wireguard/wgctrl/wgtypes"
)

var (
	once sync.Once
)

const (
	DefaultMTU = 1420
)

var (
	_ internal.EngineManager = (*Engine)(nil)
)

// Engine is the daemon that manages the WireGuard device
type Engine struct {
	logger        *log.Logger
	keyManager    internal.KeyManager
	Name          string
	device        *wg.Device
	client        *controlclient.Client
	drpClient     *drpclient.Client
	bind          *wrapper.NetBind
	GetNetworkMap func() (*vo.NetworkMap, error)
	updated       atomic.Bool

	group atomic.Value //belong to which group

	nodeManager  *internal.NodeManager
	agentManager internal.AgentManagerFactory
	wgConfigure  internal.ConfigureManager
	current      *internal.NodeMessage

	callback func(message *internal.Message) error
}

type EngineConfig struct {
	Logger        *log.Logger
	Conf          *config.LocalConfig
	Port          int
	UdpConn       *net.UDPConn
	InterfaceName string
	client        *controlclient.Client
	drpClient     *drpclient.Client
	WgLogger      *wg.Logger
	TurnServerUrl string
	ForceRelay    bool
	ManagementUrl string
	SignalingUrl  string
	ShowWgLog     bool
}

func (e *Engine) IpcHandle(conn net.Conn) {
	e.device.IpcHandle(conn)
}

// NewEngine create a tun auto
func NewEngine(cfg *EngineConfig) (*Engine, error) {
	var (
		device        tun.Device
		relayer       *wrapper.Relayer
		err           error
		engine        *Engine
		proberManager internal.ProbeManager
		proxy         *drpclient.Proxy
	)
	engine = new(Engine)
	engine.logger = cfg.Logger

	once.Do(func() {
		engine.Name, device, err = internal.CreateTUN(DefaultMTU, cfg.Logger)
	})

	if err != nil {
		return nil, err
	}

	v4conn, _, err := wrapper.ListenUDP("udp4", uint16(cfg.Port))

	if err != nil {
		return nil, err
	}

	engine.drpClient, err = drpclient.NewClient(&drpclient.ClientConfig{Addr: cfg.SignalingUrl, Logger: log.NewLogger(log.Loglevel, "signalingclient")})
	if err != nil {
		return nil, err
	}

	// init stun
	turnClient, err := turnclient.NewClient(&turnclient.ClientConfig{
		ServerUrl: cfg.TurnServerUrl,
		Conf:      cfg.Conf,
		Logger:    log.NewLogger(log.Loglevel, "turnclient"),
	})

	if err != nil {
		return nil, err
	}

	relayInfo, err := turnClient.GetRelayInfo(true)

	if err != nil {
		return nil, err
	}
	engine.logger.Infof("relay conn addr: %s", relayInfo.RelayConn.LocalAddr().String())

	agentManager := drp.NewAgentManager()
	engine.agentManager = agentManager
	engine.nodeManager = internal.NewPeersManager()

	universalUdpMuxDefault := agentManager.NewUdpMux(v4conn)

	// init key manager
	engine.keyManager = internal.NewKeyManager("")

	proxy = drpclient.NewProxy(&drpclient.ProxyConfig{
		DrpClient: engine.drpClient,
	})

	engine.bind = wrapper.NewBind(&wrapper.BindConfig{
		Logger:          log.NewLogger(log.Loglevel, "net-bind"),
		UniversalUDPMux: universalUdpMuxDefault,
		V4Conn:          v4conn,
		DrpClient:       engine.drpClient,
		Proxy:           proxy,
	})

	relayer = wrapper.NewRelayer(engine.bind)

	proberManager = probe.NewManager(cfg.ForceRelay, universalUdpMuxDefault.UDPMuxDefault, universalUdpMuxDefault, relayer, engine, cfg.TurnServerUrl)

	offerHandler := drp.NewOfferHandler(&drp.OfferHandlerConfig{
		Logger:       log.NewLogger(log.Loglevel, "offer-handler"),
		ProbeManager: proberManager,
		AgentManager: engine.agentManager,
		StunUri:      cfg.TurnServerUrl,
		KeyManager:   engine.keyManager,
		NodeManager:  engine.nodeManager,
		Proxy:        proxy,
	})

	proxy.SetOfferHandler(offerHandler)

	// controlclient
	grpcClient, err := grpcclient.NewClient(&grpcclient.GrpcConfig{Addr: cfg.ManagementUrl, Logger: log.NewLogger(log.Loglevel, "grpc-client")})
	if err != nil {
		return nil, err
	}

	engine.device = wg.NewDevice(device, engine.bind, cfg.WgLogger)

	// start engine, open udp port
	if err := engine.device.Up(); err != nil {
		return nil, err
	}

	wgConfigure := internal.NewWgConfigure(&internal.WGConfigerParams{
		Device:       engine.device,
		IfaceName:    engine.Name,
		PeersManager: engine.nodeManager,
	})
	engine.wgConfigure = wgConfigure

	engine.client = controlclient.NewClient(&controlclient.ClientConfig{
		Logger:          log.NewLogger(log.Loglevel, "controlclient"),
		PeersManager:    engine.nodeManager,
		Conf:            cfg.Conf,
		UdpMux:          universalUdpMuxDefault.UDPMuxDefault,
		UniversalUdpMux: universalUdpMuxDefault,
		KeyManager:      engine.keyManager,
		AgentManager:    engine.agentManager,
		ProberManager:   proberManager,
		TurnClient:      turnClient,
		GrpcClient:      grpcClient,
		OfferHandler:    offerHandler,
		Engine:          engine,
	})

	// limit node count
	var (
		count int64
	)
	engine.current, count, err = engine.client.Get(context.Background())
	if err != nil {
		return nil, err
	}

	// TODO
	if count >= 5 {
		return nil, errors.New("your device count has reached the maximum limit")
	}
	var privateKey string
	var publicKey string
	if engine.current.AppID != cfg.Conf.AppId {
		key, err := wgtypes.GeneratePrivateKey()
		if err != nil {
			return nil, err
		}
		privateKey = key.String()
		publicKey = key.PublicKey().String()
		_, err = engine.client.Register(privateKey, publicKey, cfg.Conf.Token)
		if err != nil {
			engine.logger.Errorf("register failed, with err: %s\n", err.Error())
			return nil, err
		}
		engine.logger.Infof("register to manager success")
	} else {
		privateKey = engine.current.PrivateKey
	}
	//update key
	engine.keyManager.UpdateKey(privateKey)
	engine.nodeManager.AddPeer(engine.keyManager.GetPublicKey(), engine.current)

	// start heart to signaling
	go func() {
		if err = engine.drpClient.Heartbeat(context.Background(), proxy, engine.keyManager.GetPublicKey()); err != nil {
			engine.logger.Errorf("send heart beat failed: %v", err)
		}
	}()

	return engine, err
}

// Start will get networkmap
func (e *Engine) Start() error {
	// GetNetMap peers from control plane first time, then use watch
	networkMap, err := e.GetNetworkMap()
	if err != nil {
		e.logger.Errorf("sync peers failed: %v", err)
	}

	e.logger.Verbosef("get network map: %s", networkMap)

	// config device
	internal.SetDeviceIP()("add", e.current.Address, e.Name)

	if err = e.DeviceConfigure(&internal.DeviceConfig{
		PrivateKey: e.keyManager.GetKey(),
	}); err != nil {
		return err
	}

	for _, node := range networkMap.Nodes {
		e.nodeManager.AddPeer(node.PublicKey, node)
	}
	// watch
	go func() {
		for {
			if err := e.client.Watch(context.Background(), e.client.HandleWatchMessage); err != nil {
				e.logger.Errorf("watch failed: %v", err)
				time.Sleep(10 * time.Second) // retry after 10 seconds
				continue
			}
		}
	}()

	go func() {
		if err := e.client.Keepalive(context.Background()); err != nil {
			e.logger.Errorf("keepalive failed: %v", err)
		} else {
			e.logger.Infof("mgt client keepliving...")
		}
	}()

	return nil
}

//func (e *Engine) registerToSignaling(ctx context.Context, cfg *config.LocalConfig) error {
//
//	publicKey := e.keyManager.GetPublicKey()
//	var req = &signaling.EncryptMessageReqAndResp{
//		SrcPublicKey: publicKey,
//		Token:        cfg.Token,
//	}
//
//	bs, err := proto.Marshal(req)
//	if err != nil {
//		return err
//	}
//
//	in := &signaling.EncryptMessage{
//		PublicKey: publicKey,
//		Body:      bs,
//	}
//
//	_, err = e.drpClient.Register(ctx, in)
//
//	if err != nil {
//		e.logger.Errorf("register to signaling failed: %v", err)
//		return err
//	}
//	return nil
//}

func (e *Engine) Stop() error {
	e.device.Close()
	return nil
}

// SetConfig updates the configuration of the given interface.
func (e *Engine) SetConfig(conf *internal.DeviceConf) error {
	nowConf, err := e.device.IpcGet()
	if err != nil {
		return err
	}

	if conf.String() == nowConf {
		e.logger.Infof("config is same, no need to update")
		return nil
	}

	reader := strings.NewReader(conf.String())

	return e.device.IpcSetOperation(reader)
}

func (e *Engine) DeviceConfigure(conf *internal.DeviceConfig) error {
	return e.device.IpcSet(conf.String())
}

func (e *Engine) AddPeer(peer internal.NodeMessage) error {
	return e.device.IpcSet(peer.NodeString())
}

// RemovePeer add remove=true
func (e *Engine) RemovePeer(peer internal.NodeMessage) error {
	peer.Remove = true
	return e.device.IpcSet(peer.NodeString())
}

func (e *Engine) close() {
	e.drpClient.Close()
	e.device.Close()
}

func (e *Engine) GetWgConfiger() internal.ConfigureManager {
	return e.wgConfigure
}

func (e *Engine) GetRelayer() internal.Relay {
	return nil
}
